react/src/index.css
@import "tailwindcss";

@import "tailwindcss";

@layer base {
  body {
    @apply bg-slate-900 text-slate-300 antialiased;
  }
}

.split-vertical {
  display: flex;
  flex-direction: column;
}

.gutter {
  background-color: #1e293b;
  /* slate-800 */
  background-repeat: no-repeat;
  background-position: 50%;
}

.gutter.gutter-vertical {
  cursor: row-resize;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyCB2iAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFBgABE5ARqBOQIMAAAAAElFTkSuQmCC');
}

.gutter:hover {
  background-color: #334155;
  /* slate-700 */
}

